# LightChat

./: .gitignore  CMakeLists.txt  generated_icons.qrc
chat_server/: CMakeLists.txt
chat_server/src/: logic_system.cc  logic_system.hpp  main.cc  server.cc  server.hpp  session.cc  session.hpp
client/: CMakeLists.txt  generated_icons.qrc
client/src/: chat_dlg.cc  chat_dlg.hpp  chat_user_list.cc  chat_user_list.hpp  chatuserwid.cc  chatuserwid.hpp  clickable_lbl.cc  clickable_lbl.hpp  customize_edit.cc  customize_edit.hpp  global.cc  global.hpp  listitem_base.hpp  login_dlg.cc  login_dlg.hpp  main.cc  mainwindow.cc  mainwindow.hpp  pwd_visible_lbl.cc  pwd_visible_lbl.hpp  register_dlg.cc  register_dlg.hpp  reset_pwd_dlg.cc  reset_pwd_dlg.hpp  stateful_btn.cc  stateful_btn.hpp  struct_def.hpp  tcp_manager.cc  tcp_manager.hpp  timer_btn.cc  timer_btn.hpp  user_manager.cc  user_manager.hpp
client/stylesheet/: stylesheet.qss
client/ui/: chat_dlg.ui  logindlg.ui  mainwindow.ui  register_dlg.ui  reset_pwd_dlg.ui
common/: config.ini  constant.hpp  defer.hpp  grpc_status_connection_pool.cc  grpc_status_connection_pool.hpp  http_manager.cc  http_manager.hpp  message.proto  mysql_dao.cc  mysql_manager.cc  mysql_manager.hpp  nocopy.hpp  redis_connection_manager.cc  redis_connection_pool.cc  redis_connection_pool.hpp  rpc_connection_pool.cc  singleton.hpp  tcp_msg_node.cc  tcp_msg_node.hpp  toolfunc.cc  toolfunc.hpp
config/: basic_config.ini  chat_server2_config.ini  chat_server_config.ini  config.ini  env.txt  status_server_config.ini
gate_server/: CMakeLists.txt
gate_server/src/: global.hpp  grpc_status_client.cc  grpc_status_client.hpp  http_connection.hpp  logic_system.hpp  server.cc
proto/: message.proto
resources/: resources.qrc
resources/style/: stylesheet.qss
server/: CMakeLists.txt
server/src/: config_manager.cc  config_manager.hpp  grpc_vertify_code_client.cc  grpc_vertify_code_client.hpp  http_connection.cc  http_connection.hpp  io_context_pool.cc  io_context_pool.hpp  logic_system.cc  main.cc  mysql_dao.cc  mysql_dao.hpp  mysql_manager.cc  mysql_manager.hpp  redis_connection_manager.cc  redis_connection_manager.hpp  redis_connection_pool.cc  rpc_connection_pool.hpp  server.cc  server.hpp
src/: main.cc  test.cc  test.hpp
src/chat_server/: CMakeLists.txt  chat_rpc_server.cc  chat_rpc_server.hpp  logic_system.cc  logic_system.hpp  main.cc  server.cc  server.hpp  session.cc  session.hpp  user_manager.cc  user_manager.hpp
src/client/: CMakeLists.txt  add_user_item.cc  add_user_item.hpp  apply_friend_dialog.cc  apply_friend_dialog.hpp  authen_friend_dlg.cc  authen_friend_dlg.hpp  bubble_frame.cc  bubble_frame.hpp  chat_dialog.cc  chat_dialog.hpp  chat_item_base.cc  chat_item_base.hpp  chat_page.cc  chat_page.hpp  chat_user_list.cc  chat_user_list.hpp  chat_user_wid.cc  chat_user_wid.hpp  chat_view.cc  chat_view.hpp  chatdialog.cc  chatdialog.hpp  chatpage.cc  chatpage.hpp  chatuserlist.cc  chatuserwid.cc  chatuserwid.hpp  chatview.cc  chatview.hpp  clicked_btn.cc  clicked_btn.hpp  clicked_label.cc  clicked_label.hpp  clicked_once_label.cc  clicked_once_label.hpp  clickedbtn.cc  clickedbtn.hpp  clickedlabel.cc  clickedlabel.hpp  (+81 more)
src/client/backup/: bubble_frame.cc  chat_item_base.hpp  chat_view.hpp  text_bubble.cc  text_bubble.hpp
src/client/ui/: applyfrienddlg.ui  authenfrienddlg.ui  chatdialog.ui  chatpage.ui  chatuserwid.ui  contactuseritem.ui  findfaileddlg.ui  findsuccessdlg.ui  friendinfopage.ui  friendlabel.ui  loadingdialog.ui  logindialog.ui  mainwindow.ui  newfriendapplyitem.ui  newfriendapplypage.ui  registerdialog.ui  resetdialog.ui  userinfopage.ui
src/common/: CMakeLists.txt
src/common/manager/: config_manager.cc  config_manager.hpp  distributed_lock.cc  distributed_lock.hpp  mysql_dao.cc  mysql_dao.hpp  mysql_manager.cc  mysql_manager.hpp  redis_manager.cc  redis_manager.hpp
src/common/pool/: chat_server_conn_pool.cc  chat_server_conn_pool.hpp  iocontext_pool.cc  iocontext_pool.hpp  mysql_conn_pool.cc  mysql_conn_pool.hpp  redis_conn_pool.cc  redis_conn_pool.hpp  rpc_conn_pool.cc  rpc_conn_pool.hpp  status_server_conn_pool.cc  status_server_conn_pool.hpp
src/common/rpc_client/: chat_rpc_client.cc  chat_rpc_client.hpp  status_rpc_client.cc  status_rpc_client.hpp  vertify_rpc_client.cc  vertify_rpc_client.hpp
src/common/utility/: constant.hpp  defer.cc  defer.hpp  nocopy.hpp  singleton.hpp  status_rpc_client.cc  status_rpc_client.hpp  tcp_msg_node.cc  tcp_msg_node.hpp  toolfunc.cc  toolfunc.hpp  userinfo.hpp
src/gate_server/: CMakeLists.txt  httpconn.cc  httpconn.hpp  logic_system.cc  logic_system.hpp  main.cc  server.cc  server.hpp  vertify_rpc_client.cc  vertify_rpc_client.hpp
src/sql/: lightchat.sql
src/status_server/: CMakeLists.txt  main.cc  status_server.cc  status_server.hpp
src/vertify_server/: config.js  package-lock.json  package.json  proto.js  redis.js  server.js
status_server/: CMakeLists.txt
status_server/src/: main.cc  status_server_impl.cc  status_server_impl.hpp
vertify_server/: config.json  package-lock.json  package.json  proto.js  server.js
